[package]
name = "rusty-blob"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
thiserror = "2.0.17"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = {version = "1.48.0", features = ["full"]}
aes = "0.7.5"
block-modes = { version = "0.8.1", features = ["std"] }
block-padding = "0.3.3"
rand = "0.8.5"
flate2 = "1.0"
tokio-fs = "0.2.0-alpha.6"
axum = {version = "0.8.6", features = ["multipart"] }
http = "0.2.12"
infer = {version = "0.19.0"}
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower = { version = "0.5.2", features = ["limit"] }
tracing = "0.1.41"
serde_json = "1.0.145"
base64 = "0.22.1"
jwt_auth={ path = "../jwt_auth" }
tracing-subscriber = {version = "0.3.20", features = ["fmt", "env-filter"] }

