[package]
name = "rusty_cache"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
sled="0.34.10"
uuid={ version = "1.4.3", features = ["v4"] }
thiserror = {version = "2.0.17"}
tracing = "0.1.41"