[package]
name = "blob-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.188", features = ["derive"] }
tokio = {version = "1.48.0", features = ["full"]}
async-trait = "0.1.89"
uuid = "1.19.0"
bincode = "1.3.3"
sha2 = "0.11.0-rc.3"
rand = "0.10.0-rc.5"