[package]
name = "object_store_v2"
version = "0.1.0"
edition = "2024"

[lib]
name = "object_store_v2"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.11.0-rc.3"
rand = "0.10.0-rc.5"
thiserror = "2.0.17"
http = "1.4.0"
hex = "0.4.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tokio-util = { version = "0.7.17", features = ["io"] }
uuid = "1.19.0"
futures-util = "0.3.31"
hyper = { version = "1", features = ["http2"] }
hyper-util = {version = "0.1", features = ["tokio"]}
tower = "0.5"
axum = "0.8.7"