[package]
name = "data_dusk"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
infrastructure = { path = "../../pkg/infrastructure" }
application = { path = "../../pkg/application" }
dotenv = "0.15.0"
dotenvy_macro = "0.15.7"