[package]
name = "data_dusk"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
infrastructure = { path = "../../pkg/infrastructure" }
application = { path = "../../pkg/application" }
dotenv = "0.15.0"
mime_guess = "2"
infer = "0.19.0"