[package]
name = "persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
application = { path = "../application" }
anyhow = "1.0.100"
aes-gcm = "0.11.0-rc.2"
flate2 = "1.1.5"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4.42"
rand = {version = "0.8"}
serde_json = "1.0.145"
rand_core = "0.6"
infer = "0.19.0"
sha2 = "0.10"
hex = "0.4"
mime_guess = "2"