[package]
name = "jwt_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
tracing = "0.1.41"